--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ plugins {
 group = 'io.jynx.migrator'
 version = '1.0'
 
-sourceCompatibility = 17
-targetCompatibility = 17
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
 repositories {
     mavenCentral()
@@ -32,6 +32,6 @@ publishing {
 }
 
 wrapper {
-    gradleVersion = "8.2"
+    gradleVersion = "8.8"
     distributionType = Wrapper.DistributionType.ALL
 }
