--- a/build.gradle
+++ b/build.gradle
@@ -4,18 +4,23 @@ plugins {
 }
 
 group = 'io.jynx.migrator'
-version = '1.1.2'
+version = '1.2.0'
 
-sourceCompatibility = '17'
-targetCompatibility = '17'
+sourceCompatibility = '21'
+targetCompatibility = '21'
 
 repositories {
     mavenCentral()
 }
 
+ext {
+    guavaVersion = "33.4.0-jre"
+    springBootVersion = "3.4.3"
+}
+
 dependencies {
-    implementation 'com.google.guava:guava:33.2.1-jre'
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive:3.3.1'
+    implementation "com.google.guava:guava:$guavaVersion"
+    implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:$springBootVersion"
 }
 
 java {
